[gd_scene load_steps=5 format=3 uid="uid://bwb4i255sv2gu"]

[ext_resource type="Script" uid="uid://cl7nuwc0nm2v6" path="res://scripts/ui/SkillConfirmDialog.gd" id="1_xs20e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dtcmd"]
bg_color = Color(0.00523333, 0.0045, 0.01, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.8, 0.8, 0.8, 0.788235)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color(0.54, 0.54, 0.54, 0.745098)
shadow_size = 5
shadow_offset = Vector2(10, 10)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xs20e"]
bg_color = Color(0.2, 0.8, 0.2, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w60wb"]
bg_color = Color(0.8, 0.2, 0.2, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="SkillConfirmDialog" type="AcceptDialog"]
transparent_bg = true
title = "使用技能"
initial_position = 1
size = Vector2i(400, 200)
theme_override_styles/panel = SubResource("StyleBoxFlat_dtcmd")
ok_button_text = ""
dialog_hide_on_ok = false
script = ExtResource("1_xs20e")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -23.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="SkillNameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
theme_override_font_sizes/font_size = 18
text = "技能名稱"
horizontal_alignment = 1

[node name="SkillDescLabel" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 15
text = "技能描述"
horizontal_alignment = 1
autowrap_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="ConfirmButton" type="Button" parent="VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(80, 35)
layout_mode = 2
theme_override_font_sizes/font_size = 17
theme_override_styles/normal = SubResource("StyleBoxFlat_xs20e")
text = "確定"

[node name="CancelButton" type="Button" parent="VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(80, 35)
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_w60wb")
text = "取消"
