# SkillConfirmDialog.gd
# æŠ€èƒ½ç¢ºèªå°è©±æ¡†
extends AcceptDialog

# ==================== ä¿¡è™Ÿ ====================
signal skill_confirmed(card: CardData, target: EnemyData)
signal skill_cancelled()

# ==================== å¼•ç”¨ ====================
@onready var skill_name_label = $VBoxContainer/SkillNameLabel
@onready var skill_desc_label = $VBoxContainer/SkillDescLabel
@onready var confirm_button = $VBoxContainer/ButtonContainer/ConfirmButton
@onready var cancel_button = $VBoxContainer/ButtonContainer/CancelButton

# ==================== è³‡æ–™ ====================
var current_card: CardData = null
var current_target: EnemyData = null

# ==================== åˆå§‹åŒ– ====================

func _ready():
	hide()
	
	if confirm_button:
		confirm_button.pressed.connect(_on_confirm)
	
	if cancel_button:
		cancel_button.pressed.connect(_on_cancel)

# ==================== é¡¯ç¤ºå°è©±æ¡† ====================

func show_skill_dialog(card: CardData, target: EnemyData = null, p_battle_manager = null):
	"""é¡¯ç¤ºæŠ€èƒ½ç¢ºèªå°è©±æ¡† (æ–°ç‰ˆï¼šæœƒè¨ˆç®—å‹•æ…‹æ•¸å€¼)"""
	print("\nğŸ” [SkillConfirmDialog] show_skill_dialog è¢«èª¿ç”¨")
	print("  - å¡ç‰‡: %s" % (card.card_name if card else "null"))

	current_card = card
	current_target = target

	if not card or not card.active_skill:
		print("  âŒ å¡ç‰‡æˆ–æŠ€èƒ½ç‚º nullï¼Œå–æ¶ˆé¡¯ç¤º")
		return

	var skill = card.active_skill
	print("  - æŠ€èƒ½: %s" % skill.skill_name)

	# 1. è¨­ç½®æŠ€èƒ½åç¨± (å®‰å…¨è¨ªå•)
	var skill_name = ""
	if "skill_name" in skill:
		skill_name = skill.skill_name
	else:
		skill_name = "æœªçŸ¥æŠ€èƒ½"
	skill_name_label.text = skill_name

	# 2. è¨­ç½®æŠ€èƒ½æè¿°
	var base_description = ""
	if "skill_description" in skill:
		base_description = skill.skill_description
	else:
		base_description = "ç„¡æè¿°"
	var final_description = base_description
	var calculated_value_str = ""

	# 3. è¨ˆç®—å‹•æ…‹æ•¸å€¼
	var skill_id = ""
	if "skill_id" in skill:
		skill_id = skill.skill_id
	match skill_id:	
		"active_heavy_strike":
			if "multiplier" in skill:
				var damage = int(card.current_atk * skill.multiplier)
				calculated_value_str = str(damage)
		"active_aoe_damage":
			if "multiplier" in skill:
				var damage = int(card.current_atk * skill.multiplier)
				calculated_value_str = str(damage)

		"active_heal":
			if p_battle_manager:
				# éœ€è¦ battle_manager ä¾†ç²å–å…¨éšŠå›å¾©åŠ›
				var heal_amount = p_battle_manager.total_recovery
				calculated_value_str = str(heal_amount)
			else:
				calculated_value_str = "?" # é é˜² battle_manager æœªå‚³å…¥

		_:
			# å…¶ä»–æ²’æœ‰ {value} çš„æŠ€èƒ½æœƒä¿æŒåŸæ¨£
			pass

	# 4. æ›¿æ›ä½”ä½ç¬¦
	if not calculated_value_str.is_empty():
		final_description = base_description.replace("{value}", calculated_value_str)

	# 5. è¨­ç½®æœ€çµ‚çš„æŠ€èƒ½æè¿°
	skill_desc_label.text = final_description

	# 6. æª¢æŸ¥ CD å’Œ END_TURN_DAMAGE é™åˆ¶
	var can_use = card.can_use_active_skill()

	# âœ… æª¢æŸ¥ END_TURN_DAMAGE æŠ€èƒ½ä½¿ç”¨é™åˆ¶
	# åªæœ‰åœ¨ã€Œåˆšæ–©å‡»ç»“æŸã€ANDã€Œå·²æœ‰ä¸»åŠ¨æŠ€èƒ½ END_TURN_DAMAGE Buffã€æ—¶æ‰é˜»æ­¢
	if can_use and p_battle_manager and p_battle_manager.slash_ended:
		if card.active_skill and "effects" in card.active_skill:
			for effect in card.active_skill.effects:
				if effect.get("effect_type", "") == "END_TURN_DAMAGE":
					# æ£€æŸ¥æ˜¯å¦å·²ç»æœ‰ END_TURN_DAMAGE Buff åœ¨ç”Ÿæ•ˆ
					if p_battle_manager.has_active_buff("END_TURN_DAMAGE"):
						can_use = false
					break

	if can_use:
		confirm_button.disabled = false
		confirm_button.text = "ç¢ºå®š"
	else:
		confirm_button.disabled = true

		if card.is_stunned:
			confirm_button.text = "çœ©æšˆä¸­"
		elif card.active_skill_current_cd > 0:
			confirm_button.text = "CD: %d" % card.active_skill_current_cd
		elif p_battle_manager and p_battle_manager.slash_ended:
			# âœ… æ–°å¢ï¼šé¡¯ç¤ºæ–¬æ“Šå‰›çµæŸçš„æç¤º
			var has_end_turn_damage = false
			if card.active_skill and "effects" in card.active_skill:
				for effect in card.active_skill.effects:
					if effect.get("effect_type", "") == "END_TURN_DAMAGE":
						has_end_turn_damage = true
						break
			# åªæœ‰å½“æœ‰ç°å­˜çš„ Buff æ—¶æ‰æ˜¾ç¤º"è«‹å…ˆæ–¬æ“Š"
			if has_end_turn_damage and p_battle_manager.has_active_buff("END_TURN_DAMAGE"):
				confirm_button.text = "è«‹å…ˆæ–¬æ“Š"
			else:
				confirm_button.text = "ç„¡æ³•ä½¿ç”¨"
		else:
			confirm_button.text = "ç„¡æ³•ä½¿ç”¨"

	print("  âœ“ æº–å‚™é¡¯ç¤ºå°è©±æ¡†...")
	print("    - æŠ€èƒ½åç¨±: %s" % skill_name_label.text)
	print("    - æŠ€èƒ½æè¿°: %s" % skill_desc_label.text)
	print("    - æŒ‰éˆ•æ–‡å­—: %s" % confirm_button.text)
	popup_centered()
	print("  âœ“ popup_centered() å·²èª¿ç”¨")

# ==================== æŒ‰éˆ•å›èª¿ ====================

func _on_confirm():
	"""ç¢ºèªä½¿ç”¨æŠ€èƒ½"""
	skill_confirmed.emit(current_card, current_target)
	hide()

func _on_cancel():
	"""å–æ¶ˆä½¿ç”¨æŠ€èƒ½"""
	skill_cancelled.emit()
	hide()
